# CosMAP-dr

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: package-checks.yml  publish-pypi.yml
examples/: quick_digits.py  quick_mnist.py
src/cosmap/: __init__.py  cosmap.py  initialization.py  kernels.py  optimization.py  similarities.py
src/cosmap_dr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cosmapdr/: __init__.py  cosmapdr.py  initialization.py  metrics.py  numba_optimization.py  optimization.py  reproducibility.py  similarities.py  utils.py
tests/: test_digits_mnist.py
