[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmap-dr"
version = "0.1.1"
description = "CosMAP: Contrastive Manifold Approximation and Projection"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Fenosoa Randrianjatovo"}
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "torch",
  "tqdm",
  "umap-learn",
  "pynndescent"
]
keywords = [
  "dimensionality reduction",
  "manifold learning",
  "contrastive learning",
  "data visualization",
  "single-cell RNA sequencing"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Visualization"
]

[project.urls]
Homepage = "https://github.com/FenosoaRandrianjatovo/CosMAP-dr"
Repository = "https://github.com/FenosoaRandrianjatovo/CosMAP-dr"
Issues = "https://github.com/FenosoaRandrianjatovo/CosMAP-dr/issues"

[project.optional-dependencies]
gpu = ["faiss-gpu"]
dev = ["matplotlib", "pytest"]

[tool.setuptools]
packages = ["cosmapdr"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
cosmapdr = ["py.typed"]
